# lidar-integration-rd

./: .rosinstall  README.md
field_building/: CMakeLists.txt  package.xml
field_building/launch/: aggregate_clouds.launch
field_building/rviz/: field_building.rviz
field_building/src/: cloud_aggregator_node.cpp  opend3d_cloud_aggregator.cpp  utm_odometry_node.cpp
field_building/urdf/: os1_sensor.urdf
lidar_tests/: CMakeLists.txt  os_sensor.gv  package.xml
lidar_tests/launch/robot_loc/: aggregate_clouds.launch  navsat_transform.yaml
lidar_tests/rviz/: hdl_demo.rviz  hdl_graph_slam.rviz  ouster_data_viz.rviz
lidar_tests/src/: cloud_aggregator_node.cpp
